--- a/bowling.css
+++ b/bowling.css
@@ -5,7 +5,6 @@
 body {
     font-family: 'Montserrat', sans-serif;
     color:#414042;
-    margin: 0px;
 }
 .black{
 	background-color:black;
@@ -36,10 +35,10 @@ h2{
         padding:10px;
 }
 h1{
-    text-align:center;
+    margin:auto;
 }
 #res{
-    margin-left: 350px;
+    margin-left: 330px;
     padding:10px;
 }
 #slider1{
@@ -50,28 +49,7 @@ h1{
     height:100px;
 }
 #submitbutton{
-    margin-left:500px
-}
-
-
-
-/* CSS from before */
-/* Style the header */
-/* header {
-    background-color: black;
-    padding: 30px;
-    text-align: center;
-    font-size: 35px;
-    color: white;
-} */
-/* #reservation{
-    float: left;
-    background-color: white;
-    text-align:center;
-    width: 70%;
-    border: 2px solid black;
-    height: 1000px; */
-/*     height is temporary just to see */
+    margin-left:520px;
 }
 #timepicker{
     border: 3px solid #00B6C9;
@@ -79,37 +57,21 @@ h1{
     height:200px;
     width: 200px;
     text-align:left;
-}
-/* #testimonials{
-    background-color: gray;
-    text-align: center;
-    width:30%;
-    border: 2px solid black;
-    height: 1000px; */
-/*     height is temporary just to see
-}
-
-/* Style the footer */
-/* footer {
-    background-color: #00B6C9;
-    padding: 10px;
-    text-align: center;
-    color: white;
-    clear: both;
-}
-.carousel-inner{
-    width:100%;
-    position: relative;
-    left: 100px;
-    font-size: 20px;
+    position:relative;
+    left:140px;
+    top:10px;
 }
 #namepicker{
-    position:absolute;
-    left:580px;
-    top:900px;
+    position:relative;
+    left:120px;
+    top:60px;
+/*     border: 3px solid #00B6C9; */
 }
-#submitbutton{
-    position:absolute;
-    left:450px;
-    top:1000px;
-} */ */
+#one{
+    width:50px;
+}
+#two{
+    width:50px;
+    position:relative;
+    bottom:260px;
+}
