--- a/bowling.css
+++ b/bowling.css
@@ -20,8 +20,14 @@ body {
 }
 [class*=orange]{
     height: 700px;} */
+
+
+/* meant to be removed/commented when header is added */
 [class*=black]{
 	height: 300px;
+}
+[class*=black2]{
+	height: 100px;
 }
 [class*=nested]{
 	height: 300px;
@@ -36,6 +42,10 @@ h2{
 }
 h1{
     padding:5px;
+    text-align:center;
+}
+#res{
+    text-align:center;
 }
 /* #res{
     margin-left: 330px;
@@ -46,7 +56,7 @@ h1{
     }
 #footer{
     padding-top:10px;
-    height:130px;
+    height:auto;
     color: white;
 }
 #timepicker{
@@ -55,13 +65,10 @@ h1{
     height:200px;
     width: 200px;
     text-align:left;
-    position:relative;
-    left:140px;
-    top:10px;
 }
 #namepicker{
     position:relative;
-    left:120px;
+/*     left:120px; */
     top:60px;
 /*     border: 3px solid #00B6C9; */
 }
@@ -177,17 +184,29 @@ a:hover{
     
 }
 #datepicker {
-    margin-left: 150px;
+/*     margin-left: auto; */
+/*     align-items: center;
+  justify-content: center; */
+}
+.box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 #laneIcon{
-    margin-left:120px;
+/*     margin-left:120px; */
 }
 #laneInput{
-    margin-left:100px;
+/*     margin-left:100px; */
 }
 #lanetwo{
     margin-left:50px;
 }
 #ball2{
-    margin-left:50px;
+/*     margin-left:50px; */
+}
+.flex-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
