--- a/bowling.css
+++ b/bowling.css
@@ -210,3 +210,53 @@ a:hover{
   justify-content: center;
   align-items: center;
 }
+
+
+
+
+
+
+
+
+
+header {
+    background-color: black;
+    padding: 1px;
+    text-align: center;
+    font-size: 50px;
+    color: white;
+    float: center
+}
+
+
+
+
+
+
+img{
+    width: 500px;
+    height: 3000px;
+    right: 300px;
+
+}
+
+red{
+	background-color: #d62839;
+    height: 300px;
+}
+
+orange {
+background-color: #fe5f00;
+height: 700px;
+width: 9000px;
+
+}
+
+
+h6{
+
+text-align: center;
+font-size: 13px
+top: 250px;
+    
+}
