--- a/bowling.css
+++ b/bowling.css
@@ -271,7 +271,7 @@ top: 250px;
     
 }
 #msg{
-        width:60%;
+/*         width:60%; */
     right: 0px;
 }
 
@@ -284,7 +284,25 @@ h4{
 
 }
 
-
-    
-    
+/* #headercarousel{
+ height:200px;   
+} */
+/* #headslider{
+    height:1%;
+} */
+#firstslide{
+    height:450px;
+}
+#secondslide{
+    height:450px;
+}
+#thirdslide{
+    height:450px;
+}
+#fourthslide{
+    height:450px;
+}
+.carousel-caption{
+    top: 50%;
+transform: translateY(-30%);
 }
