--- a/bowling.css
+++ b/bowling.css
@@ -1,3 +1,4 @@
+
 * {
     box-sizing: border-box;
 }
@@ -24,7 +25,7 @@ body {
 
 /* meant to be removed/commented when header is added */
 [class*=black]{
-	height: 300px;
+	height: auto;
 }
 [class*=black2]{
 	height: 100px;
@@ -143,7 +144,7 @@ a:hover{
 }
 
 /* When the checkbox is checked, add a blue background */
-.container input:checked ~ .checkmark {
+.container input: checked ~ .checkmark {
   background-color: #F26522;
 }
 
@@ -200,7 +201,10 @@ a:hover{
 /*     margin-left:100px; */
 }
 #lanetwo{
-    margin-left:50px;
+    margin-left:20px;
+}
+#laneone{
+        margin-left:-20px;    
 }
 #ball2{
 /*     margin-left:50px; */
@@ -210,3 +214,74 @@ a:hover{
   justify-content: center;
   align-items: center;
 }
+
+
+
+
+
+
+
+
+
+/* header {
+    background-color: black;
+    padding: 1px;
+    text-align: center;
+    font-size: 50px;
+    color: white;
+    float: center
+} */
+
+
+
+
+
+
+/* img{
+    width: 500px;
+    height: 3000px;
+    right: 300px;
+} */
+
+/* red{
+	background-color: #d62839;
+    height: 300px;
+} */
+
+/* orange {
+background-color: #fe5f00;
+height: 700px;
+width: 9000px;
+} */
+
+
+h6{
+
+text-align: center;
+font-size: 13px
+top: 250px;
+    
+}
+
+.message{
+    
+    font-size: 15px;
+    color: #FFFFFF;
+    
+}
+#msg{
+        width:60%;
+    right: 0px;
+}
+
+h4{
+   right:40%;
+    top:40%;
+    color: #FFFFFF;
+    position: absolute;
+    font-size: 36px;
+
+}
+
+
+    
