--- a/bowling.css
+++ b/bowling.css
@@ -46,10 +46,12 @@ p {
 h2{
         text-align:center;
         padding:10px;
+        font-weight: bold;
 }
 h1{
     padding:5px;
     text-align:center;
+    font-weight: bold;
 }
 #res{
     text-align:center;
