--- a/bowling.css
+++ b/bowling.css
@@ -46,10 +46,12 @@ p {
 h2{
         text-align:center;
         padding:10px;
+        font-weight:bold;
 }
 h1{
     padding:5px;
     text-align:center;
+    font-weight:bold;
 }
 #res{
     text-align:center;
@@ -320,6 +322,7 @@ transform: translateY(-30%);
 }
 h3{
     font-size:37px;
+    font-weight:bold;
 }
 
 .submitrow{
