deleted testing.html and testing.css and finished lane picking buttons

--- a/bowling.css
+++ b/bowling.css
@@ -55,7 +55,7 @@ h1{
 }
 #res{
     text-align:center;
-    margin-top: 60px;
+    padding-top:80px;
 }
 /* #res{
     margin-left: 330px;
@@ -117,7 +117,7 @@ a:hover{
 
 
 /* Customize the label (the container) */
-.container {
+/* .container {
   display: block;
   position: relative;
   padding-left: 35px;
@@ -128,51 +128,51 @@ a:hover{
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-}
+} */
 
 /* Hide the browser's default checkbox */
-.container input {
+/* .container input {
   position: absolute;
   opacity: 0;
   cursor: pointer;
-}
+} */
 
 /* Create a custom checkbox */
-.checkmark {
+/* .checkmark {
   position: absolute;
   top: 0;
   left: 0;
   height: 25px;
   width: 25px;
   background-color: #eee;
-}
+} */
 
 /* On mouse-over, add a grey background color */
-.container:hover input ~ .checkmark {
+/* .container:hover input ~ .checkmark {
   background-color: #ccc;
-}
+} */
 
 
 /* When the checkbox is checked, add a orange background */
 
-.container input:checked ~ .checkmark {
+/* .container input:checked ~ .checkmark {
   background-color: #F26522;
-}
+} */
 
 /* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after {
+/* .checkmark:after {
   content: "";
   position: absolute;
   display: none;
 }
-
+ */
 /* Show the checkmark when checked */
-.container input:checked ~ .checkmark:after {
+/* .container input:checked ~ .checkmark:after {
   display: block;
-}
+} */
 
 /* Style the checkmark/indicator */
-.container .checkmark:after {
+/* .container .checkmark:after {
   left: 9px;
   top: 5px;
   width: 5px;
@@ -182,19 +182,19 @@ a:hover{
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
-}
+} */
 
-.ballContainer img {
+/* .ballContainer img {
     width: 50px;
     height: 50px;
     margin: auto;    
     display: block;
-}
+} */
 
-#laneInput {
+/* #laneInput {
     margin: auto;
     
-}
+} */
 #datepicker {
 /*     margin-left: auto; */
 /*     align-items: center;
@@ -205,18 +205,18 @@ a:hover{
   align-items: center;
   justify-content: center;
 }
-#laneIcon{
-/*     margin-left:120px; */
-}
+/* #laneIcon{
+    margin-left:120px;
+} */
 #laneInput{
 /*     margin-left:100px; */
 }
-#lanetwo{
+/* #lanetwo{
     margin-left:20px;
-}
-#laneone{
+} */
+/* #laneone{
         margin-left:-20px;    
-}
+} */
 #ball2{
 /*     margin-left:50px; */
 }
@@ -328,6 +328,10 @@ h3{
 
 .submitrow{
     height:50px;
+/*     width:400px; */
+}
+#submitbutton{
+    
 }
 .words{
     font-size:30px;
@@ -337,3 +341,10 @@ h3{
 /*     padding-top:-100px; */
     width:300px;
 }
+
+
+
+
+
+
+/* JAVASCRIPT CSS UNDER HERE */
